@@ -35,8 +35,22 @@ public class PointServiceImpl implements PointService {
                 .build();
     }
 
+
+
+
+
+
     @Override
     public UpdatePointResponse updatePointByUserId(Long userId, UpdatePointRequest pointRequest) {
+
+        // 입력 값 검증 및 치환
+        BigDecimal usePoints = pointRequest.usePoints() != null && pointRequest.usePoints().compareTo(BigDecimal.ZERO) > 0
+                ? pointRequest.usePoints()
+                : BigDecimal.ZERO;
+
+        BigDecimal amount = pointRequest.amount() != null && pointRequest.amount().compareTo(BigDecimal.ZERO) > 0
+                ? pointRequest.amount()
+                : BigDecimal.ZERO;
 
         List<String> policyNames = List.of("Normal", "Royal", "Gold", "Platinum");
 
@@ -47,32 +61,111 @@ public class PointServiceImpl implements PointService {
             throw new IllegalArgumentException("회원 등급은 2개 이상일 수 없습니다.");
         }
 
-        PointPolicy pointPolicy = pointPolicyRepository.findById(filteredUserGrades.getFirst().getPointPolicy().getPointPolicyId())
+        PointPolicy pointPolicy = pointPolicyRepository.findById(filteredUserGrades.get(0).getPointPolicy().getPointPolicyId())
                 .orElseThrow(() -> new IllegalArgumentException("포인트 정책을 찾을 수 없습니다."));
 
         Point point = pointRepository.findByUser_UserId(userId);
 
         BigDecimal tempPoint = point.getPointCurrent()
-                                    .add(pointRequest.amount().multiply(pointPolicy.getPointPolicyRate()))
-                                    .subtract(pointRequest.usePoints());
+                .add(amount.multiply(pointPolicy.getPointPolicyRate()))
+                .subtract(usePoints);
 
         if (tempPoint.compareTo(BigDecimal.ZERO) < 0) {
             throw new IllegalArgumentException("포인트가 부족합니다.");
         }
 
-
         point.updatePointCurrent(tempPoint);
-
         pointRepository.save(point);
 
-        // todo : 포인트 이력 추가
-//        pointLogRepository.save(PointLog.builder()
-//                        .pointLogUpdatedAt(LocalDateTime.now())
-//                        .
-//                        .build());
+        // 포인트로 구매 시 포인트 이력 추가
+        if (usePoints.compareTo(BigDecimal.ZERO) > 0) {
+
+            pointLogRepository.save(PointLog.builder()
+                    .pointLogUpdatedAt(LocalDateTime.now())
+                    .pointLogUpdatedType("사용")
+                    .pointLogAmount(usePoints)
+                    .point(point)
+                    .build());
+        }
+
+        // 구매 시 구매 금액에 따른 포인트 적립 이력 추가
+        if (amount.compareTo(BigDecimal.ZERO) > 0) {
+
+            pointLogRepository.save(PointLog.builder()
+                            .pointLogUpdatedAt(LocalDateTime.now())
+                            .pointLogUpdatedType("적립")
+                            .pointLogAmount(amount.multiply(pointPolicy.getPointPolicyRate()))
+                            .point(point)
+                            .build());
+        }
 
         return UpdatePointResponse.builder()
                 .point(point.getPointCurrent())
                 .build();
     }
+
+
+
+
+
+
+
+
+
+
+
+
+
+//    // 포인트로 구매 후 구매 금액에 따른 포인트 적립
+//    @Override
+//    public UpdatePointResponse updatePointByUserId(Long userId, UpdatePointRequest pointRequest) {
+//
+//        List<String> policyNames = List.of("Normal", "Royal", "Gold", "Platinum");
+//
+//        // 유저가 가진 회원 등급 중에 정책 이름이 Normal, Royal, Gold, Platinum인 등급만 필터링
+//        List<UserGrade> filteredUserGrades = userGradeRepository.findByUser_UserIdAndPointPolicy_PointPolicyNameIn(userId, policyNames);
+//
+//        if (filteredUserGrades.size() != 1) {
+//            throw new IllegalArgumentException("회원 등급은 2개 이상일 수 없습니다.");
+//        }
+//
+//        PointPolicy pointPolicy = pointPolicyRepository.findById(filteredUserGrades.getFirst().getPointPolicy().getPointPolicyId())
+//                .orElseThrow(() -> new IllegalArgumentException("포인트 정책을 찾을 수 없습니다."));
+//
+//        Point point = pointRepository.findByUser_UserId(userId);
+//
+//        BigDecimal tempPoint = point.getPointCurrent()
+//                                    .add(pointRequest.amount().multiply(pointPolicy.getPointPolicyRate()))
+//                                    .subtract(pointRequest.usePoints());
+//
+//        if (tempPoint.compareTo(BigDecimal.ZERO) < 0) {
+//            throw new IllegalArgumentException("포인트가 부족합니다.");
+//        }
+//
+//
+//        point.updatePointCurrent(tempPoint);
+//
+//        pointRepository.save(point);
+//
+//        // 포인트로 구매 시 포인트 이력 추가
+//        pointLogRepository.save(PointLog.builder()
+//                        .pointLogUpdatedAt(LocalDateTime.now())
+//                        .pointLogUpdatedType("사용")
+//                        .pointLogAmount(pointRequest.usePoints())
+//                        .point(point)
+//                        .build());
+//
+//
+//        // 구매 시 구매 금액에 따른 포인트 적립 이력 추가
+//        pointLogRepository.save(PointLog.builder()
+//                        .pointLogUpdatedAt(LocalDateTime.now())
+//                        .pointLogUpdatedType("적립")
+//                        .pointLogAmount(pointRequest.amount().multiply(pointPolicy.getPointPolicyRate()))
+//                        .point(point)
+//                        .build());
+//
+//        return UpdatePointResponse.builder()
+//                .point(point.getPointCurrent())
+//                .build();
+//    }
 }
